# Cbc

./: .gitignore  CMakeLists.txt
.github/workflows/: amd64_linux.yml  amd64_macos.yml  amd64_windows.yml  arm64_macos.yml
Cbc/: CMakeLists.txt
Cbc/test/: CMakeLists.txt  CbcTest.cpp
ci/: Makefile
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/sample/: main.cpp
